Bug 380115. Handle situations where the GTK widget is huge and its associated X drawable is positioned at some offset relative to the GTK widget's origin. r=vlad